add new website from server na

--- a/xem-phim-moi/nang-cong-chua-o-thung-lung-gio/index.html
+++ b/xem-phim-moi/nang-cong-chua-o-thung-lung-gio/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             11
+             12
             </dd>
             <br/>
            </dl>
@@ -1690,18 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhan-chung-2" title="Nhân Chứng">
+          <a class="list-top-movie-link" href="/phim-moi/lau-trung-khanh" title="Lẩu Trùng Khánh">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhan-chung-2021-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lau-trung-khanh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhân Chứng
+             Lẩu Trùng Khánh
             </span>
             <span class="list-top-movie-item-en">
-             Key Witness
+             Huo guo ying xiong
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1712,18 +1712,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/grand-jete" title="Grand Jeté">
+          <a class="list-top-movie-link" href="/phim-moi/ngoc-lau-xuan" title="Ngọc Lâu Xuân">
            <span class="status">
-            HD Vietsub
+            HD Vietsub + Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/grand-jete-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoc-lau-xuan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Grand Jeté
+             Ngọc Lâu Xuân
             </span>
             <span class="list-top-movie-item-en">
-             Grand Jeté
+             Song of Youth
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1734,21 +1734,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truyen-thuyet-ve-korra-phan-4" title="Truyền Thuyết Về Korra (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/binh-phap-ton-tu-va-36-ke" title="Binh Pháp Tôn Tử và 36 Kế">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truyen-thuyet-ve-korra-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/binh-phap-ton-tu-va-36-ke-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Truyền Thuyết Về Korra (Phần 4)
+             Binh Pháp Tôn Tử và 36 Kế
             </span>
             <span class="list-top-movie-item-en">
-             The Legend of Korra (Season 4)
+             Sun Tzu's the Art of War and the Thirty Six Stratagems
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1756,21 +1756,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/am-sau-do-phep-mau-tren-nui-tuyet" title="Âm sáu độ: Phép màu trên núi tuyết">
+          <a class="list-top-movie-link" href="/phim-moi/diep-vien-tro-lai" title="Điệp Viên Trở Lại">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-sau-do-phep-mau-tren-nui-tuyet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/diep-vien-tro-lai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Âm sáu độ: Phép màu trên núi tuyết
+             Điệp Viên Trở Lại
             </span>
             <span class="list-top-movie-item-en">
-             6 Below: Miracle on the Mountain
+             End Of A Gun
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1778,21 +1778,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thoi-gian-vang" title="Thời Gian Vàng">
+          <a class="list-top-movie-link" href="/phim-moi/gia-tai-vi-dai" title="Gia Tài Vĩ Đại">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/golden-time-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-tai-vi-dai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thời Gian Vàng
+             Gia Tài Vĩ Đại
             </span>
             <span class="list-top-movie-item-en">
-             Golden Time
+             Great Expectations
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
