add new website from server na

--- a/xem-phim-bo/than-vo-thien-ton/index.html
+++ b/xem-phim-bo/than-vo-thien-ton/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1661,21 +1661,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giao-su-ji-i" title="Giáo sư Ji I">
+          <a class="list-top-movie-link" href="/phim-moi/nhiet-huyet-bong-ro" title="Nhiệt Huyết Bóng Rổ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giao-su-ji-i-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhiet-huyet-bong-ro-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giáo sư Ji I
+             Nhiệt Huyết Bóng Rổ
             </span>
             <span class="list-top-movie-item-en">
-             Professor Ji I
+             Nhiệt Huyết Bóng Rổ
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1683,40 +1683,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mat-danh-k2" title="Mật danh K2">
+          <a class="list-top-movie-link" href="/phim-moi/hoi-tham-phan" title="Hội Thẩm Phán">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-danh-k2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-tham-phan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mật danh K2
+             Hội Thẩm Phán
             </span>
             <span class="list-top-movie-item-en">
-             The K2
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quy-co-thich-mot-minh" title="Quý Cô Thích Một Mình">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quy-co-thich-mot-minh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Quý Cô Thích Một Mình
-            </span>
-            <span class="list-top-movie-item-en">
-             Individualist Ms. Ji Young
+             Dredd
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1727,21 +1705,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-co-nang-gilmore-phan-4" title="Những cô nàng Gilmore (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/chao-mung-den-samdal-ri" title="Chào Mừng Đến Samdal-ri">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-co-nang-gilmore-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-mung-den-samdal-ri-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những cô nàng Gilmore (Phần 4)
+             Chào Mừng Đến Samdal-ri
             </span>
             <span class="list-top-movie-item-en">
-             Gilmore Girls (Season 4)
+             Welcome to Samdal-ri
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1749,21 +1727,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/van-phong-thuyet-am-muu" title="Văn phòng thuyết âm mưu">
+          <a class="list-top-movie-link" href="/phim-moi/dem-me-vang-nha" title="Đêm mẹ vắng nhà">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/van-phong-thuyet-am-muu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-me-vang-nha-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Văn phòng thuyết âm mưu
+             Đêm mẹ vắng nhà
             </span>
             <span class="list-top-movie-item-en">
-             Inside Job
+             Moms' Night Out
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/mot-trai-dat-khac" title="Một Trái Đất Khác">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mot-trai-dat-khac-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Một Trái Đất Khác
+            </span>
+            <span class="list-top-movie-item-en">
+             Another Earth
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
