add new website from server na

--- a/xem-phim-bo/than-vo-thien-ton/index.html
+++ b/xem-phim-bo/than-vo-thien-ton/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1661,84 +1661,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhiet-huyet-bong-ro" title="Nhiệt Huyết Bóng Rổ">
+          <a class="list-top-movie-link" href="/phim-moi/doi-chong-tham-nhung-4" title="Đội Chống Tham Nhũng 4">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhiet-huyet-bong-ro-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-chong-tham-nhung-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhiệt Huyết Bóng Rổ
+             Đội Chống Tham Nhũng 4
             </span>
             <span class="list-top-movie-item-en">
-             Nhiệt Huyết Bóng Rổ
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoi-tham-phan" title="Hội Thẩm Phán">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-tham-phan-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hội Thẩm Phán
-            </span>
-            <span class="list-top-movie-item-en">
-             Dredd
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chao-mung-den-samdal-ri" title="Chào Mừng Đến Samdal-ri">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-mung-den-samdal-ri-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chào Mừng Đến Samdal-ri
-            </span>
-            <span class="list-top-movie-item-en">
-             Welcome to Samdal-ri
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dem-me-vang-nha" title="Đêm mẹ vắng nhà">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-me-vang-nha-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đêm mẹ vắng nhà
-            </span>
-            <span class="list-top-movie-item-en">
-             Moms' Night Out
+             P Storm
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1749,21 +1683,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mot-trai-dat-khac" title="Một Trái Đất Khác">
+          <a class="list-top-movie-link" href="/phim-moi/moi-tinh-thu-29-cua-miho" title="Mối Tình Thứ 29 Của Miho">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mot-trai-dat-khac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/moi-tinh-thu-29-cua-miho-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Một Trái Đất Khác
+             Mối Tình Thứ 29 Của Miho
             </span>
             <span class="list-top-movie-item-en">
-             Another Earth
+             미호의 29금 실제정사
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             6 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ben-trong-nhung-nha-tu-khoc-liet-nhat-the-gioi-phan-1" title="Bên trong những nhà tù khốc liệt nhất thế giới (Phần 1)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ben-trong-nhung-nha-tu-khoc-liet-nhat-the-gioi-phan-1-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bên trong những nhà tù khốc liệt nhất thế giới (Phần 1)
+            </span>
+            <span class="list-top-movie-item-en">
+             Inside the World’s Toughest Prisons (Season 1)
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-hoan-kiep" title="Tình Yêu Hoán Kiếp">
+           <span class="status">
+            HD Vietsub + Thuyết minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-hoan-kiep-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tình Yêu Hoán Kiếp
+            </span>
+            <span class="list-top-movie-item-en">
+             The Passbook
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/mot-noi-xa-hon-vu-tru" title="Một nơi xa hơn vũ trụ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mot-noi-xa-hon-vu-tru-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Một nơi xa hơn vũ trụ
+            </span>
+            <span class="list-top-movie-item-en">
+             A Place Further than the Universe
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
