--- a/xem-phim-bo/the-gioi-hoan-my/index.html
+++ b/xem-phim-bo/the-gioi-hoan-my/index.html
@@ -1200,7 +1200,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1691,18 +1691,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giao-uoc-chet" title="Giao Ước Chết">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-song-cua-brad" title="Cuộc sống của Brad">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giao-uoc-chet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-song-cua-brad-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giao Ước Chết
+             Cuộc sống của Brad
             </span>
             <span class="list-top-movie-item-en">
-             The Promise
+             Brad's Status
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tim-kiem-van-menh-2" title="Tìm kiểm vận mệnh 2">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tim-kiem-van-menh-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tìm kiểm vận mệnh 2
+            </span>
+            <span class="list-top-movie-item-en">
+             Tìm kiểm vận mệnh 2
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/giao-duc-gioi-tinh-phan-3" title="Giáo Dục Giới Tính (Phần 3)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giao-duc-gioi-tinh-phan-3-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Giáo Dục Giới Tính (Phần 3)
+            </span>
+            <span class="list-top-movie-item-en">
+             Sex Education (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1713,18 +1757,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-tu-dai-tai-phan-3" title="Thám Tử Đại Tài (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/poco-o-the-gioi-udon" title="Poco ở thế giới Udon">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-dai-tai-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/poco-o-the-gioi-udon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thám Tử Đại Tài (Phần 3)
+             Poco ở thế giới Udon
             </span>
             <span class="list-top-movie-item-en">
-             The Mentalist (Season 3)
+             Poco's Udon World
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1735,62 +1779,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/canh-cua-bi-mat" title="Cánh Cửa Bí Mật">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/canh-cua-bi-mat-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cánh Cửa Bí Mật
-            </span>
-            <span class="list-top-movie-item-en">
-             Secret Door
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thuong-hai-phon-hoa" title="Thượng Hải Phồn Hoa">
+          <a class="list-top-movie-link" href="/phim-moi/thi-luyen-sinh-tu" title="Thí Luyện Sinh Tử">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phon-hoa-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thi-luyen-sinh-tu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thượng Hải Phồn Hoa
+             Thí Luyện Sinh Tử
             </span>
             <span class="list-top-movie-item-en">
-             Blossoms Shanghai
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vua-he-sac-lo-tuyen-tap-chang-lao-cong-moi" title="Vua Hề Sác-lô: Tuyển Tập Chàng Lao Công Mới">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-he-sac-lo-tuyen-tap-chang-lao-cong-moi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vua Hề Sác-lô: Tuyển Tập Chàng Lao Công Mới
-            </span>
-            <span class="list-top-movie-item-en">
-             Collection New Janitor
+             Death Game
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
